modified email_service.py modified extensions.py modified models.py modified templates/base.html modified templates/dashboard.html new file CHANGES.md new file IMPLEMENTATION.md new file QUICK_REFERENCE.md new file utils/reporting.py new file templates/account_performance.html new file templates/accounts.html new file templates/campaign_report.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
   <div>
     <a href="/" class="btn btn-sm btn-outline-light">Dashboard</a>
     <a href="/contacts" class="btn btn-sm btn-outline-light">Contacts</a>
+    <a href="/groups" class="btn btn-sm btn-outline-light">Groups</a>
     <a href="/analytics" class="btn btn-sm btn-outline-light">Analytics</a>
   </div>
 </nav>
