--- a/templates/campaign_report.html
+++ b/templates/campaign_report.html
@@ -176,7 +176,7 @@
     </div>
 </div>
 
-<script src="/socket.io/socket.io.js"></script>
+<script src="https://cdn.socket.io/4/socket.io.min.js"></script>
 <script>
 document.addEventListener('DOMContentLoaded', function(){
     const container = document.getElementById('campaign-live');
